--- a/druzya.html
+++ b/druzya.html
@@ -33,7 +33,7 @@
                 <br>
                 Добрый, умный и надёжный друг на все времена! 
                 <br>
-                Его контакты: <a href="https://vk.com/id236293444" target="_blank">ВКонтакте </a>
+                Его контакты: <a href="https://vk.com/usinru" target="_blank">ВКонтакте </a>
                 
             </p>
         </div>
